--- a/Serenity/index.html
+++ b/Serenity/index.html
@@ -145,7 +145,7 @@
         </div>
 
 
-        <dotlottie-player src="https://lottie.host/a0fa4bb7-d600-4b50-bb3b-1c6f0454b99c/RszezBnOa0.json" background="transparent" speed="1" style="width: 1420px;  height: 800px;" loop autoplay></dotlottie-player>
+        <dotlottie-player src="https://lottie.host/a0fa4bb7-d600-4b50-bb3b-1c6f0454b99c/RszezBnOa0.json" background="transparent" speed="1" style="width: 100%;  height: 100%;" loop autoplay></dotlottie-player>
     </div>
 
 
