--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <h4>Contact</h4> -->
                 <a id="nav-links" href="#main-text">Suraj Kumar</a>
                 <button id="two">Resume</button>
-                <button id="two">Contact me</button>
+                <button id="two">Contact</button>
             </div>
         </nav>
 
